@@ -1,6 +1,6 @@
 package school.redrover.model;
 
-import org.openqa.selenium.By;
+import io.qameta.allure.Step;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
@@ -8,15 +8,8 @@ import org.openqa.selenium.support.ui.ExpectedConditions;
 import school.redrover.model.base.BaseProjectPage;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FolderProjectPage extends BaseProjectPage<FolderProjectPage> {
-
-    @FindBy(css = "[class*='breadcrumbs']>[href*='job']")
-    private WebElement breadcrumbsName;
-
-    @FindBy(css = "[href*='confirm-rename']")
-    private WebElement renameButton;
 
     @FindBy(css = ".empty-state-section")
     private WebElement emptyStateSection;
@@ -25,174 +18,100 @@ public class FolderProjectPage extends BaseProjectPage<FolderProjectPage> {
     private List<WebElement> itemsList;
 
     @FindBy(xpath = "//a[.='New Item']")
-    private WebElement newItem;
-
-    @FindBy(xpath = "//*[@id='description']/div")
-    private WebElement description;
-
-    @FindBy(xpath = "//*[@id='description-link']")
-    private WebElement descriptionLink;
-
-    @FindBy(xpath = "//textarea[@name='description']")
-    private WebElement textareaDescription;
-
-    @FindBy(xpath = "//*[@name='Submit']")
-    private WebElement saveButton;
-
-    @FindBy(xpath = "//tr[contains(@id,'job_')]/td[3]/a")
-    private WebElement itemInTable;
-
-    @FindBy(css = "[href^='/job'] [class$='dropdown-chevron']")
-    private WebElement breadcrumbsDropdownArrow;
-
-    @FindBy(css = "[class*='dropdown'] [href$='move']")
-    private WebElement dropdownMoveButton;
+    private WebElement newItemOnSidebar;
 
     @FindBy(css = "td [href*='job']:first-child")
     private WebElement nestedProjectName;
-
-    @FindBy(css = "[class*='dropdown'] [href$='rename']")
-    private WebElement dropdownRenameButton;
-
-    @FindBy(css = "a[data-title='Delete Folder']")
-    private WebElement deleteOnSidebar;
-
-    @FindBy(css = "button[data-id='ok']")
-    private WebElement yesButtonOnDeleteFolderAlert;
 
     @FindBy(css = "h2.h4")
     private WebElement messageFromEmptyFolder;
 
     @FindBy(css = "a.content-block__link")
-    private WebElement createJobLink;
+    private WebElement createAJob;
 
-    @FindBy(xpath = "//button[@class='jenkins-dropdown__item'][contains(@href, 'Delete')]")
-    private WebElement deleteProject;
+    @FindBy(css = "[class*='dropdown'] [href$='move']")
+    private WebElement dropdownMove;
+
+    @FindBy(css = "[class*='dropdown'] [href$='rename']")
+    private WebElement dropdownRename;
+
+    @FindBy(css = "[class*='dropdown'] [href$='Delete']")
+    private WebElement dropdownDelete;
+
+    @FindBy(xpath = "//button[@data-id='ok']")
+    private WebElement yesButton;
 
     public FolderProjectPage(WebDriver driver) {
         super(driver);
-    }
-
-    public String getBreadcrumbName() {
-        return breadcrumbsName.getText();
-    }
-
-    public FolderRenamePage clickOnRenameButton() {
-        renameButton.click();
-
-        return new FolderRenamePage(getDriver());
     }
 
     public Boolean isFolderEmpty() {
         return emptyStateSection.isDisplayed();
     }
 
-    public CreateNewItemPage clickNewItemInsideFolder() {
-        newItem.click();
+    @Step("Click 'New Item' on the sidebar")
+    public CreateNewItemPage clickNewItemOnSidebar() {
+        newItemOnSidebar.click();
 
         return new CreateNewItemPage(getDriver());
     }
 
+    @Step("Get Item list inside folder")
     public List<String> getItemListInsideFolder() {
-        return itemsList
-                .stream()
-                .map(WebElement::getText)
-                .collect(Collectors.toList());
+        return itemsList.stream().map(WebElement::getText).toList();
     }
 
-    public FolderProjectPage clickAddOrEditDescription() {
-        descriptionLink.click();
-        return this;
-    }
-
-    public FolderProjectPage setDescription(String text) {
-        textareaDescription.sendKeys(text);
-        return this;
-    }
-
-    public FolderProjectPage clearDescription() {
-        textareaDescription.clear();
-        return this;
-    }
-
-    public FolderProjectPage clickSaveButton() {
-        saveButton.click();
-        return this;
-    }
-
-    public String getDescriptionText() {
-        return description.getText();
-    }
-
-    public String getItemInTableName() {
-        return itemInTable.getText();
-    }
-
-    public FolderProjectPage hoverOverBreadcrumbsName() {
-        hoverOverElement(breadcrumbsName);
-
-        return this;
-    }
-
-    public FolderProjectPage clickBreadcrumbsDropdownArrow() {
-        clickSpecificDropdownArrow(breadcrumbsDropdownArrow);
-
-        return this;
-    }
-
-    public MovePage clickDropdownMoveButton() {
-        dropdownMoveButton.click();
-
-        return new MovePage(getDriver());
-    }
-
-    public FolderProjectPage clickMainFolderName(String mainFolder) {
-        getDriver().findElement(By.cssSelector("[class*='breadcrumbs']>[href*='job/" + mainFolder + "']")).click();
-
-        return new FolderProjectPage(getDriver());
-    }
-
+    @Step("Get first item name inside Folder")
     public String getNestedProjectName() {
         return nestedProjectName.getText();
     }
 
-    public FolderRenamePage clickDropdownRenameButton() {
-        dropdownRenameButton.click();
-
-        return new FolderRenamePage(getDriver());
-    }
-
-    public FolderProjectPage clickDeleteOnSidebar() {
-        deleteOnSidebar.click();
-
-        return this;
-    }
-
-    public HomePage clickYesForDeleteFolder() {
-        yesButtonOnDeleteFolderAlert.click();
-
-        return new HomePage(getDriver());
-    }
-
+    @Step("Checking the presence of item with specific name inside Folder")
     public boolean isItemExistsInsideFolder(String nameItem) {
         return getItemListInsideFolder().contains(nameItem);
     }
 
+    @Step("Get message inside empty Folder")
     public String getMessageFromEmptyFolder() {
         return messageFromEmptyFolder.getText();
     }
 
-    public String getTextWhereClickForCreateJob() {
-        return createJobLink.getText();
+    @Step("Get link text for create a job")
+    public String getLinkTextForCreateJob() {
+        return createAJob.getText();
     }
 
+    @Step("Checking the presence of a link to create a job on the page")
     public Boolean isLinkForCreateJobDisplayed() {
-        return createJobLink.isDisplayed();
+        return createAJob.isDisplayed();
     }
 
-    public FolderProjectPage clickJobNameBreadcrumb(String name) {
-        getWait5().until(ExpectedConditions.elementToBeClickable(By.xpath("//a[@class = 'jenkins-dropdown__item'][contains(@href," + name + ")]"))).click();
+    @Step("Click 'Move' on the project dropdown menu")
+    public ProjectMovePage<?> clickMoveOnDropdown() {
+        dropdownMove.click();
+
+        return new ProjectMovePage<>(getDriver());
+    }
+
+    @Step("Click 'Rename' on the project dropdown menu")
+    public ProjectRenamePage<?> clickRenameOnDropdown() {
+        dropdownRename.click();
+
+        return new ProjectRenamePage<>(getDriver());
+    }
+
+    @Step("Click 'Delete' on dropdown menu")
+    public FolderProjectPage clickDeleteOnDropdown() {
+        dropdownDelete.click();
 
         return this;
     }
-   }
+
+    @Step("Click 'Yes' in confirming dialog")
+    public FolderProjectPage clickYesToConfirmDelete() {
+        getWait2().until(ExpectedConditions.visibilityOf(yesButton)).click();
+
+        return this;
+    }
+
+}
