@@ -1,64 +1,34 @@
 package school.redrover.model;
 
-import org.openqa.selenium.*;
+import io.qameta.allure.Step;
+import org.openqa.selenium.By;
+import org.openqa.selenium.JavascriptExecutor;
+import org.openqa.selenium.Keys;
+import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebElement;
 import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.support.FindBy;
-import org.openqa.selenium.support.FindBys;
 import org.openqa.selenium.support.ui.ExpectedConditions;
-import org.testng.Assert;
 import school.redrover.model.base.BaseProjectPage;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
-
-    @FindBy(id = "description-link")
-    private WebElement changeDescriptionButton;
-
-    @FindBy(name = "description")
-    private WebElement descriptionInput;
-
-    @FindBy(name = "Submit")
-    private WebElement saveButton;
-
-    @FindBy(css = "#description>:first-child")
-    private WebElement displayedDescription;
-
-    @FindBy(css = ".textarea-preview")
-    private WebElement descriptionPreview;
-
-    @FindBy(css = ".textarea-show-preview")
-    private WebElement showDescriptionPreview;
-
-    @FindBy(css = ".textarea-hide-preview")
-    private WebElement hideDescriptionPreview;
-
-    @FindBy(css = "[data-title='Delete Pipeline']")
-    private WebElement sidebarDeleteButton;
-
-    @FindBy(css = "[class*='breadcrumbs']>[href*='job']")
-    private WebElement breadcrumbsName;
-
-    @FindBy(css = "[href^='/job'] [class$='dropdown-chevron']")
-    private WebElement breadcrumbsDropdownArrow;
-
-    @FindBy(css = "[class*='dropdown'] [href$='Delete']")
-    private WebElement breadcrumbsDeleteButton;
-
-    @FindBy(css = "a[href$='rename']")
-    private WebElement sidebarRenameButton;
 
     @FindBy(css = "a[href$='configure']")
     private WebElement sidebarConfigureButton;
 
-    @FindBy(xpath = "//a[@data-build-success = 'Build scheduled']")
-    private WebElement buildButton;
+    @FindBy(css = "[data-build-success]")
+    private WebElement buildNowOnSidebar;
 
     @FindBy(xpath = "//td[contains(@class, 'progress-bar')]")
     private WebElement buildProgressBar;
 
-    @FindBy(css = "[aria-describedby^='tippy'")
+    @FindBy(css = "[aria-describedby^='tippy']")
     private WebElement buildScheduledPopUp;
 
     @FindBy(xpath = "//a[contains(@href, 'workflow-stage')]")
@@ -73,23 +43,8 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
     @FindBy(css = "[class*='dropdown__item'][href$='changes']")
     private WebElement dropdownChangesButton;
 
-    @FindBy(css = "[class*='dropdown'] [href$='rename']")
-    private WebElement breadcrumbsRenameButton;
-
-    @FindBy(className = "date")
-    private WebElement stageDate;
-
-    @FindBy(className = "time")
-    private WebElement stageTime;
-
-    @FindBy(className = "badge")
-    private WebElement stageBadge;
-
-    @FindBy(xpath = "//div[@class='changeset-box no-changes']")
-    private WebElement stageStatus;
-
     @FindBy(css = "form > button")
-    private WebElement disablebutton;
+    private WebElement disableProjectButton;
 
     @FindBy(xpath = "//button[@name='Submit']")
     private WebElement enableButton;
@@ -103,7 +58,7 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
     @FindBy(xpath = "//th[contains(@class,'stage-header-name')]")
     private List<WebElement> stageHeaderNameList;
 
-    @FindBy(xpath = "//div[@id = 'buildHistory']//tr[@class != 'build-search-row']")
+    @FindBy(xpath = "//div[@id = 'buildHistory']//tr[@class != 'build-search-row' and @class != 'transitive']")
     private List<WebElement> listOfBuilds;
 
     @FindBy(xpath = "//div[@class='pane-content']//a[contains(text(),'#')]")
@@ -112,152 +67,47 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
     @FindBy(xpath = "//th[contains(@class, 'stage-header-name')]")
     private List<WebElement> stageHeader;
 
-    @FindBys({
-            @FindBy(id = "tasks"),
-            @FindBy(className = "task-link-text")
-    })
-
-    private List<WebElement> taskLinkTextElements;
-
-
-    @FindBy(xpath = "//h1[@class='job-index-headline page-headline']")
-    private WebElement projectsDisplayNameInHeader;
-
     @FindBy(css = "span[class='glyphicon glyphicon-stats']")
     private WebElement buildStageLogsButton;
 
     @FindBy(css = "span[class='glyphicon glyphicon-remove']")
     private WebElement closeStageLogsButton;
+
     public PipelineProjectPage(WebDriver driver) {
         super(driver);
     }
 
-    public PipelineProjectPage clickSaveButton() {
-        saveButton.click();
-
-        return this;
-    }
-
-    public PipelineProjectPage clickChangeDescription() {
-        changeDescriptionButton.click();
-
-        return this;
-    }
-
-    public PipelineProjectPage setDescription(String name) {
-        descriptionInput.sendKeys(name);
-
-        return this;
-    }
-
-    public String getDescriptionText() {
-        return displayedDescription.getText();
-    }
-
-    public PipelineProjectPage waitAddDescriptionButtonDisappears() {
-        getWait2().until(ExpectedConditions.invisibilityOf(changeDescriptionButton));
-
-        return this;
-    }
-
-    public PipelineProjectPage clickShowDescriptionPreview() {
-        showDescriptionPreview.click();
-        return this;
-    }
-
-    public PipelineProjectPage clickHideDescriptionPreview() {
-        hideDescriptionPreview.click();
-        return this;
-    }
-
-    public boolean isDescriptionPreviewVisible() {
-        return descriptionPreview.isDisplayed();
-    }
-
-    public String getTextAreaBorderBacklightColor() {
-        return getDriver().switchTo().activeElement().getCssValue("box-shadow").split(" 0px")[0];
-    }
-
-    public String getCellColor() {
+    @Step("Get color of cell background")
+    public String getColorOfCell() {
         Set<String> backgroundColor = new HashSet<>();
         for (int i = 1; i <= 2; i++) {
             WebElement element = getWait10().until(ExpectedConditions.visibilityOfElementLocated(
-                    By.xpath("//tr[@data-runid='" + i + "']/td[@class='stage-cell stage-cell-0 SUCCESS']/div[@class='cell-color']")));
+                    By.xpath("//tr[@data-runid='" + i
+                            + "']/td[@class='stage-cell stage-cell-0 SUCCESS']/div[@class='cell-color']")));
 
             backgroundColor.add(element.getCssValue("background-color"));
         }
         return backgroundColor.iterator().next();
     }
 
-    public PipelineProjectPage clickOnDescriptionInput() {
-        descriptionInput.click();
-
-        return this;
-    }
-
+    @Step("Make the description field not active by sending a TAB key")
     public PipelineProjectPage makeDescriptionFieldNotActive() {
         new Actions(getDriver()).sendKeys(Keys.TAB).perform();
 
         return this;
     }
 
-    public String getDefaultTextAreaBorderBacklightColor() {
-        JavascriptExecutor js = (JavascriptExecutor) getDriver();
-
-        return (String) js.executeScript(
-                "return window.getComputedStyle(arguments[0]).getPropertyValue('--focus-input-glow');",
-                descriptionInput);
-    }
-
-    public DeleteDialog clickSidebarDeleteButton() {
-        sidebarDeleteButton.click();
-
-        return new DeleteDialog(getDriver());
-    }
-
-    public PipelineConfigPage clickSidebarConfigureButton() {
-        sidebarConfigureButton.click();
+    @Step("Click on the 'Configure' on sidebar")
+    public PipelineConfigPage clickConfigureOnSidebar() {
+        getWait2().until(ExpectedConditions.elementToBeClickable(sidebarConfigureButton)).click();
 
         return new PipelineConfigPage(getDriver());
     }
 
-    public PipelineProjectPage hoverOverBreadcrumbsName() {
-        hoverOverElement(breadcrumbsName);
-
-        return this;
-    }
-
-    public PipelineProjectPage clickBreadcrumbsDropdownArrow() {
-        clickSpecificDropdownArrow(breadcrumbsDropdownArrow);
-
-        return this;
-    }
-
-    public DeleteDialog clickBreadcrumbsDeleteButton() {
-        breadcrumbsDeleteButton.click();
-
-        return new DeleteDialog(getDriver());
-    }
-
-    public PipelineRenamePage clickSidebarRenameButton() {
-        sidebarRenameButton.click();
-
-        return new PipelineRenamePage(getDriver());
-    }
-
-    public PipelineProjectPage clickBuild() {
-        getWait5().until(ExpectedConditions.elementToBeClickable(buildButton)).click();
-
-        return this;
-    }
-
-    public PipelineProjectPage waitForBuildScheduledPopUp() {
+    @Step("Click on 'Build Now' on sidebar")
+    public PipelineProjectPage clickBuildNowOnSidebarAndWait() {
+        getWait5().until(ExpectedConditions.elementToBeClickable(buildNowOnSidebar)).click();
         getWait2().until(ExpectedConditions.visibilityOf(buildScheduledPopUp));
-
-        return this;
-    }
-
-    public PipelineProjectPage waitBuildToFinish() {
         getWait10().until(ExpectedConditions.invisibilityOf(buildProgressBar));
 
         return this;
@@ -265,37 +115,38 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
 
     public boolean isBuildAppear(int buildNumber, String jobName) {
         getDriver().navigate().refresh();
-        WebElement nBuild = getWait10().until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//td[@class = 'build-row-cell']//a[text() = '#" + buildNumber + "']")));
+        WebElement nBuild = getWait10().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath("//td[@class = 'build-row-cell']//a[text() = '#" + buildNumber + "']")));
 
         return nBuild.getAttribute("href").contains("/job/" + jobName.replaceAll(" ", "%20") + "/2/");
     }
 
     public int numberOfBuild() {
+        getDriver().navigate().refresh();
+
         return getWait5().until(ExpectedConditions.visibilityOfAllElements(listOfBuilds)).size();
     }
 
-    public FullStageViewPage clickFullStageViewButton() {
+    @Step("Click 'Full Stage View' on Sidebar menu")
+    public FullStageViewPage clickFullStageViewOnSidebarMenu() {
         getWait5().until(ExpectedConditions.elementToBeClickable(fullStageViewButton)).click();
 
         return new FullStageViewPage(getDriver());
     }
 
-    public boolean isBtnPresentInSidebar(String btnText) {
-        getWait2().until(ExpectedConditions.visibilityOfAllElements(taskLinkTextElements));
-
-        return taskLinkTextElements.stream()
-                .anyMatch(element -> btnText.equals(element.getText()));
-    }
-
+    @Step("Get message about Pipeline status")
     public String getWarningMessageText() {
         return getWait2().until(ExpectedConditions.visibilityOf(warningMessage)).getText();
     }
 
-    public String getFullStageViewButtonBackgroundColor() {
+    public String getColorOfFullStageViewButtonBackground() {
         JavascriptExecutor js = (JavascriptExecutor) getDriver();
-        return (String) js.executeScript("return window.getComputedStyle(arguments[0], '::before').getPropertyValue('background-color');", fullStageViewButton);
+        return (String) js.executeScript(
+                "return window.getComputedStyle(arguments[0], '::before').getPropertyValue('background-color');",
+                fullStageViewButton);
     }
 
+    @Step("Hover on 'Full Stage View' on Sidebar menu")
     public PipelineProjectPage hoverOnFullStageViewButton() {
         new Actions(getDriver()).scrollToElement(fullStageViewButton)
                 .moveToElement(fullStageViewButton)
@@ -305,6 +156,7 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
         return this;
     }
 
+    @Step("Click 'Build Now' certain amount times")
     public PipelineProjectPage makeBuilds(int buildsQtt) {
         for (int i = 1; i <= buildsQtt; i++) {
             getWait5().until(ExpectedConditions.elementToBeClickable(
@@ -313,6 +165,9 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
             getWait10().until(ExpectedConditions.visibilityOfAllElementsLocatedBy(
                     By.xpath("//tr[@data-runid='" + i + "']")));
         }
+
+        getWait10().until(ExpectedConditions.invisibilityOf(buildProgressBar));
+
         return this;
     }
 
@@ -320,66 +175,50 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
         return fullProjectNameLocation.getText();
     }
 
-    public PipelineChangesPage clickDropdownChangesButton() {
+    @Step("Click 'Changes' on dropdown menu")
+    public PipelineChangesPage clickChangesOnDropdownMenu() {
         dropdownChangesButton.click();
 
         return new PipelineChangesPage(getDriver());
     }
 
-    public PipelineRenamePage clickBreadcrumbsRenameButton() {
-        breadcrumbsRenameButton.click();
-
-        return new PipelineRenamePage(getDriver());
-    }
-
-    public int getSagesQtt() {
+    public int getStagesQuantity() {
 
         return stageHeader.size();
     }
 
-    public boolean getBuildAttributeStatus() {
-        boolean result = true;
-        if (stageDate == null || !stageDate.isDisplayed()) {
-            result = false;
-        }
-        if (stageTime == null || !stageTime.isDisplayed()) {
-            result = false;
-        }
-        if (stageStatus == null || !(stageStatus.getText().equals("No Changes"))) {
-            result = false;
-        }
-        if (stageBadge == null || !stageBadge.isDisplayed()) {
-            result = false;
-        }
-        return result;
-    }
-
+    @Step("Check visibility of button 'Disable Project'")
     public boolean isDisableButtonVisible() {
         return getWait2().until(ExpectedConditions
-                .visibilityOfElementLocated(By.name("Submit"))).isDisplayed();
+                .visibilityOf(disableProjectButton)).isDisplayed();
     }
 
+    @Step("Click on the button 'Disable' on Pipeline project page")
     public PipelineProjectPage clickDisableButton() {
-        disablebutton.click();
+        disableProjectButton.click();
 
         return this;
     }
 
+    @Step("Click on the button 'Enable' on Pipeline project page")
     public PipelineProjectPage clickEnableButton() {
         enableButton.click();
 
         return this;
     }
 
+    @Step("Get permalink list")
     public List<String> getPermalinkList() {
+        getDriver().navigate().refresh();
 
         return getWait10().until(ExpectedConditions.visibilityOfAllElements(permalinkList))
                 .stream()
                 .map(WebElement::getText)
                 .map(permalink -> permalink.split(",")[0].trim())
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Step("Get color of Succes Mark")
     public String getHexColorSuccessMark() {
         JavascriptExecutor js = (JavascriptExecutor) getDriver();
         WebElement statusMark = getWait10().until(ExpectedConditions.visibilityOf(buildStatusMark));
@@ -389,6 +228,7 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
                 statusMark);
     }
 
+    @Step("Get Build history list")
     public List<String> getBuildHistoryList() {
         List<String> buildOrderList = new ArrayList<>();
         for (WebElement buildNumber : buildHistoryNumberList) {
@@ -405,32 +245,31 @@ public class PipelineProjectPage extends BaseProjectPage<PipelineProjectPage> {
         return buildOrderList;
     }
 
+    @Step("Get Stage header name list")
     public List<String> getStageHeaderNameList() {
-
         List<String> headerList = new ArrayList<>();
-        for (WebElement stageHeaderElement : getWait10().until(ExpectedConditions.visibilityOfAllElements(stageHeaderNameList))) {
+        for (WebElement stageHeaderElement : getWait10().until(
+                ExpectedConditions.visibilityOfAllElements(stageHeaderNameList))) {
             headerList.add(stageHeaderElement.getText());
         }
+
         return headerList;
     }
 
-    public String getProjectsDisplayNameInHeader() {
-
-        return projectsDisplayNameInHeader.getText();
-    }
-
-    public List<String> getConsoleOuputForAllStages(int numberOfStages) {
-        List<String> consoleOuputForAllStages = new ArrayList<>();
+    @Step("Get console output for all stages")
+    public List<String> getConsoleOutputForAllStages(int numberOfStages) {
+        List<String> consoleOutputForAllStages = new ArrayList<>();
         for (int i = 1; i <= numberOfStages; i++) {
-            getWait5().until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("td[class='stage-cell stage-cell-" + (i - 1) + " SUCCESS']"))).click();
+            getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                    By.cssSelector("td[class='stage-cell stage-cell-" + (i - 1) + " SUCCESS']"))).click();
             buildStageLogsButton.click();
 
-            consoleOuputForAllStages.add(getWait5().until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("pre[class='console-output']"))).getText());
+            consoleOutputForAllStages.add(getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                    By.cssSelector("pre[class='console-output']"))).getText());
 
             closeStageLogsButton.click();
             getWait2().until(ExpectedConditions.invisibilityOf(closeStageLogsButton));
         }
-
-        return consoleOuputForAllStages;
+        return consoleOutputForAllStages;
     }
 }
